# bridge

./: Cargo.toml  Makefile  README.md
.github/workflows/: e2e-approval.yml  e2e-bridge.yml  e2e-codedb.yml  e2e-conversation-scoping.yml  e2e-integration-real.yml  e2e-integration.yml  e2e-llm.yml  e2e-observability.yml  e2e-parallel.yml  e2e-storage.yml  e2e-websocket.yml  release.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  state.rs  tests.rs
crates/api/src/handlers/: agents.rs  stream.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: logging.rs  main.rs  observability.rs  server.rs
crates/core/src/: agent.rs  config.rs  error.rs  tests.rs
crates/harness/: Cargo.toml
crates/harness/src/: acp_session.rs  claude.rs  events.rs  lib.rs  skills.rs
crates/harness/src/opencode/: mod.rs  settings.rs
crates/llm/tests/: verifier_client_http.rs  verifier_real_e2e.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: installer.rs  installer_checksums.rs  lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: connection.rs  manager.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agent_state.rs  supervisor.rs
crates/storage/src/: backend.rs  sqlite_backend.rs
crates/tools/src/: boundary.rs
crates/webhooks/src/: delivery.rs  event_bus.rs
docker/: Dockerfile
docs/core-concepts/: agents.md
docs/getting-started/: configuration.md
docs/reference/: environment-variables.md
docs/tools-reference/: index.md
e2e/bridge-e2e/tests/: conversation_scoping_e2e_tests.rs
fixtures/agents/: full_agent.json
scripts/: e2e_claude.sh  e2e_opencode.sh
(+15 files in other folders)
